smarter caching -- use If-Modified-Since, etc

--- a/Census-example.ipynb
+++ b/Census-example.ipynb
@@ -50,8 +50,7 @@
    },
    "outputs": [],
    "source": [
-    "cache = census.DBAPICache(sqlite3, database='census.db',\n",
-    "                          detect_types=sqlite3.PARSE_DECLTYPES)"
+    "cache = census.DBAPICache(sqlite3, database='census.db')"
    ]
   },
   {
@@ -69,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {
     "collapsed": true,
     "deletable": true,
@@ -78,31 +77,6 @@
    "outputs": [],
    "source": [
     "cp = RawConfigParser()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {
-    "collapsed": false,
-    "deletable": true,
-    "editable": true,
-    "scrolled": true
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['C:/cygwin64/home/nkrishna/.census']"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "cp.read('C:/cygwin64/home/nkrishna/.census')"
    ]
   },
   {
@@ -116,13 +90,38 @@
    },
    "outputs": [
     {
+     "data": {
+      "text/plain": [
+       "['C:/cygwin64/home/nkrishna/.census']"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cp.read('C:/cygwin64/home/nkrishna/.census')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {
+    "collapsed": false,
+    "deletable": true,
+    "editable": true,
+    "scrolled": false
+   },
+   "outputs": [
+    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Error processing metadata; skipping API: {'temporal': 'Time Series', 'c_examplesLink': 'http://api.census.gov/data/timeseries/poverty/histpov2/examples.json', 'c_documentationLink': 'http://www.census.gov/developer/', 'accessLevel': 'public', 'programCode': ['006:004'], 'contactPoint': {'fn': 'Current Population Survey Office', 'hasEmail': 'dsd.ferrett@census.gov'}, 'c_variablesLink': 'http://api.census.gov/data/timeseries/poverty/histpov2/variables.json', 'c_isCube': True, 'title': 'Time Series Current Population Survey: Poverty Status', 'c_isTimeseries': True, 'license': 'http://creativecommons.org/publicdomain/zero/1.0/Public Domain', 'distribution': [{'@type': 'dcat:Distribution', 'accessURL': 'http://api.census.gov/data/timeseries/poverty/histpov2', 'description': 'API endpoint', 'mediaType': 'application/json', 'title': 'API endpoint', 'format': 'API'}], 'bureauCode': ['006:07'], 'c_geographyLink': 'http://api.census.gov/data/timeseries/poverty/histpov2/geography.json', 'c_tagsLink': 'http://api.census.gov/data/timeseries/poverty/histpov2/tags.json', 'identifier': 'http://api.census.gov/data/id/CPSPoverty', 'references': ['http://www.census.gov/developers/'], 'c_isAvailable': True, '@type': 'dcat:Dataset', 'c_dataset': ['timeseries', 'poverty', 'histpov2'], 'description': 'The Current Population Survey (CPS), sponsored jointly by the U.S. Census Bureau and the U.S. Bureau of Labor Statistics (BLS), is the primary source of labor force statistics for the population of the United States. The CPS is the source of numerous high-profile economic statistics, including the national unemployment rate, and provides data on a wide range of issues relating to employment and earnings. The CPS also collects extensive demographic data that complement and enhance our understanding of labor market conditions in the nation overall, among many different population groups, in the states and in substate areas.', 'spatial': 'United States', 'publisher': {'name': 'U.S. Census Bureau', '@type': 'org:Organization', 'subOrganizationOf': {'name': 'U.S. Department Of Commerce', '@type': 'org:Organization', 'subOrganizationOf': {'name': 'U.S. Government', '@type': 'org:Organization'}}}, 'modified': '2016-09-13'}\n",
-      "Unexpected character found when decoding array value (2)\n",
+      "Error processing metadata; skipping API: {'c_isTimeseries': True, 'spatial': 'United States', 'accessLevel': 'public', 'c_isAvailable': True, 'description': 'The Current Population Survey (CPS), sponsored jointly by the U.S. Census Bureau and the U.S. Bureau of Labor Statistics (BLS), is the primary source of labor force statistics for the population of the United States. The CPS is the source of numerous high-profile economic statistics, including the national unemployment rate, and provides data on a wide range of issues relating to employment and earnings. The CPS also collects extensive demographic data that complement and enhance our understanding of labor market conditions in the nation overall, among many different population groups, in the states and in substate areas.', 'c_variablesLink': 'http://api.census.gov/data/timeseries/poverty/histpov2/variables.json', 'c_documentationLink': 'http://www.census.gov/developer/', 'distribution': [{'title': 'API endpoint', 'mediaType': 'application/json', 'accessURL': 'http://api.census.gov/data/timeseries/poverty/histpov2', '@type': 'dcat:Distribution', 'description': 'API endpoint', 'format': 'API'}], 'bureauCode': ['006:07'], 'publisher': {'@type': 'org:Organization', 'subOrganizationOf': {'@type': 'org:Organization', 'subOrganizationOf': {'@type': 'org:Organization', 'name': 'U.S. Government'}, 'name': 'U.S. Department Of Commerce'}, 'name': 'U.S. Census Bureau'}, '@type': 'dcat:Dataset', 'c_examplesLink': 'http://api.census.gov/data/timeseries/poverty/histpov2/examples.json', 'license': 'http://creativecommons.org/publicdomain/zero/1.0/Public Domain', 'c_tagsLink': 'http://api.census.gov/data/timeseries/poverty/histpov2/tags.json', 'temporal': 'Time Series', 'c_geographyLink': 'http://api.census.gov/data/timeseries/poverty/histpov2/geography.json', 'c_isCube': True, 'title': 'Time Series Current Population Survey: Poverty Status', 'identifier': 'http://api.census.gov/data/id/CPSPoverty', 'contactPoint': {'fn': 'Current Population Survey Office', 'hasEmail': 'dsd.ferrett@census.gov'}, 'references': ['http://www.census.gov/developers/'], 'modified': '2016-09-13', 'c_dataset': ['timeseries', 'poverty', 'histpov2'], 'programCode': ['006:004']}\n",
+      "<class 'ValueError'> Unexpected character found when decoding array value (2)\n",
       "\n",
-      "Wall time: 5min 3s\n"
+      "Wall time: 4min 3s\n"
      ]
     }
    ],
