--- a/Census-example.ipynb
+++ b/Census-example.ipynb
@@ -3,7 +3,9 @@
   {
    "cell_type": "code",
    "execution_count": 85,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "from __future__ import division\n",
@@ -40,7 +42,9 @@
   {
    "cell_type": "code",
    "execution_count": 87,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "%autoreload 2\n",
@@ -129,13 +133,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 108,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " "
+     ]
+    }
+   ],
    "source": [
-    "#%%prun\n",
+    "%%prun\n",
     "with uscensus.DBAPICache(sqlite3, database='uscensus.db') as cache:\n",
     "    cl = uscensus.DiscoveryInterface(\n",
     "        cp.get('census','api_key'),\n",
@@ -166,6 +178,15 @@
     "r=cl.index.index.reader()\n",
     "len(list(r.all_terms()))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -217,7 +238,9 @@
   {
    "cell_type": "code",
    "execution_count": 98,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "api=cl.search('title:2015 American Community Survey Supplemental Estimates')[0]"
