--- a/Census-example.ipynb
+++ b/Census-example.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 45,
    "metadata": {
     "collapsed": true
    },
@@ -23,38 +23,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 46,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n"
+     ]
+    }
+   ],
    "source": [
     "%load_ext autoreload"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 47,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "SystemError",
-     "evalue": "Parent module '' not loaded, cannot perform relative import",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mSystemError\u001b[0m                               Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-6-455e4adb6723>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[0mget_ipython\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mmagic\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'autoreload 2'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 2\u001b[1;33m \u001b[1;32mfrom\u001b[0m \u001b[1;33m.\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0muscensus\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;31mSystemError\u001b[0m: Parent module '' not loaded, cannot perform relative import"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%autoreload 2\n",
-    "import uscensus"
+    "import uscensus\n",
+    "from uscensus.util.sqlalchemycache import SqlAlchemyCache"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 48,
    "metadata": {
     "collapsed": true
    },
@@ -65,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 49,
    "metadata": {
     "collapsed": true
    },
@@ -76,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 50,
    "metadata": {
     "collapsed": true
    },
@@ -87,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 51,
    "metadata": {
     "scrolled": true
    },
@@ -98,7 +96,7 @@
        "['C:/cygwin64/home/nkrishna/.census']"
       ]
      },
-     "execution_count": 91,
+     "execution_count": 51,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -109,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 52,
    "metadata": {
     "collapsed": true
    },
@@ -134,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 53,
    "metadata": {
     "scrolled": true
    },
@@ -143,6 +141,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Indexing metadata\n",
+      "Done indexing metadata\n",
       " "
      ]
     }
@@ -161,37 +161,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "217403"
+       "[2015 American Community Survey 1-Year Estimates,\n",
+       " 2011-2015 American Community Survey Comparison Profile,\n",
+       " 2015 American Community Survey Subject Tables,\n",
+       " 2015 American Community Survey Subject Tables,\n",
+       " 2011-2015 American Community Survey 5-Year Profiles,\n",
+       " 2015 American Community Survey 1-Year Profiles,\n",
+       " 2011-2015 American Community Survey 5-Year Estimates,\n",
+       " 2015 American Community Survey 1-Year Data Profile 115th Congressional District,\n",
+       " 2015 American Community Survey Supplemental Estimates,\n",
+       " 2015 American Community Survey Comparison Profile]"
       ]
      },
-     "execution_count": 95,
+     "execution_count": 54,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "r=cl.index.index.reader()\n",
-    "len(list(r.all_terms()))"
+    "cl.search('American Community Survey')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 55,
+   "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "results = _\n",
+    "acs1 = results[0]"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -200,13 +209,13 @@
        "[]"
       ]
      },
-     "execution_count": 96,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "cl.search('education')"
+    "acs1.searchVariables('education')"
    ]
   },
   {
@@ -238,7 +247,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
