--- a/Census-async-example.ipynb
+++ b/Census-async-example.ipynb
@@ -31,7 +31,7 @@
    "source": [
     "import uscensus\n",
     "from uscensus.asyncio.data.discovery import AsyncDiscoveryInterface, AsyncCensusDataEndpoint\n",
-    "from uscensus.asyncio.util import AsyncSqlAlchemyDataStore"
+    "from uscensus.asyncio.util import AsyncSqlAlchemyDataStore, make_async_client"
    ]
   },
   {
@@ -83,10 +83,8 @@
     "async def main():\n",
     "    global adi\n",
     "    adi=None\n",
-    "    client = CachingClient(httpx.AsyncClient(follow_redirects=True),\n",
-    "                           cacheable_status_codes=(200,203,300,301,302,308),\n",
-    "                           heuristic=ExpiresAfterHeuristic(days=7),\n",
-    "                           cache=await AsyncSqlAlchemyDataStore.create('sqlite+aiosqlite:///testing.db'))\n",
+    "    client = make_async_client(\n",
+    "        cache=await AsyncSqlAlchemyDataStore.create('sqlite+aiosqlite:///testing.db'))\n",
     "    try:\n",
     "        adi = await AsyncDiscoveryInterface.create(\n",
     "                cp.get('census','api_key'),\n",
@@ -117,13 +115,10 @@
      "output_type": "stream",
      "text": [
       "DEBUG:uscensus.asyncio.data.discovery:Fetching root metadata\n",
-      "INFO:uscensus.asyncio.data.discovery:Processing 1 datasets\n",
       "DEBUG:uscensus.asyncio.data.discovery:Processing dataset 1986/cbp\n",
       "WARNING:uscensus.asyncio.data.model:Unable to fetch http://api.census.gov/data/1986/cbp/tags.json: Client error '404 ' for url 'https://api.census.gov/data/1986/cbp/tags.json'\n",
       "For more information check: https://httpstatuses.com/404\n",
       "DEBUG:uscensus.asyncio.data.discovery:Finished processing metadata for dataset: 1986/cbp\n",
-      "DEBUG:uscensus.asyncio.data.discovery:Indexing metadata for 1986/cbp\n",
-      "DEBUG:uscensus.asyncio.data.discovery:Indexed metadata for 1986/cbp\n",
       "INFO:uscensus.asyncio.data.discovery:Done processing datasets\n"
      ]
     }
@@ -188,7 +183,7 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>-0.000003</td>\n",
+       "      <td>-0.000001</td>\n",
        "      <td>1986/cbp</td>\n",
        "      <td>1986 County Business Patterns: Business Patterns</td>\n",
        "      <td>County Business Patterns (CBP) is an annual se...</td>\n",
@@ -199,7 +194,7 @@
       ],
       "text/plain": [
        "      score dataset_id                                             title  \\\n",
-       "0 -0.000003   1986/cbp  1986 County Business Patterns: Business Patterns   \n",
+       "0 -0.000001   1986/cbp  1986 County Business Patterns: Business Patterns   \n",
        "\n",
        "                                         description  \n",
        "0  County Business Patterns (CBP) is an annual se...  "
@@ -767,7 +762,7 @@
     {
      "data": {
       "text/plain": [
-       "<Task finished name='Task-33' coro=<call_api() done, defined at /tmp/ipykernel_497/2582133964.py:1> result=             ...s x 4 columns]>"
+       "<Task finished name='Task-33' coro=<call_api() done, defined at /tmp/ipykernel_14524/2582133964.py:1> result=             ...s x 4 columns]>"
       ]
      },
      "execution_count": 18,
@@ -781,7 +776,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -911,7 +906,7 @@
        "[63 rows x 4 columns]"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
