--- a/Census-example.ipynb
+++ b/Census-example.ipynb
@@ -95,85 +95,16 @@
       "For more information check: https://httpstatuses.com/404\n",
       "DEBUG:uscensus.data.discovery:Finished processing metadata for dataset: http://api.census.gov/data/2021/acs/acs5/profile\n",
       "DEBUG:uscensus.data.discovery:Processing dataset 2021/acs/acs5/subject\n",
-      "ERROR:uscensus.util.webcache:[Errno -3] Temporary failure in name resolution\n",
-      "Traceback (most recent call last):\n",
-      "  File \"/home/nkrishna/miniconda3/lib/python3.9/site-packages/httpcore/_exceptions.py\", line 8, in map_exceptions\n",
-      "    yield\n",
-      "  File \"/home/nkrishna/miniconda3/lib/python3.9/site-packages/httpcore/backends/sync.py\", line 82, in connect_tcp\n",
-      "    sock = socket.create_connection(\n",
-      "  File \"/home/nkrishna/miniconda3/lib/python3.9/socket.py\", line 823, in create_connection\n",
-      "    for res in getaddrinfo(host, port, 0, SOCK_STREAM):\n",
-      "  File \"/home/nkrishna/miniconda3/lib/python3.9/socket.py\", line 954, in getaddrinfo\n",
-      "    for res in _socket.getaddrinfo(host, port, family, type, proto, flags):\n",
-      "socket.gaierror: [Errno -3] Temporary failure in name resolution\n",
-      "\n",
-      "During handling of the above exception, another exception occurred:\n",
-      "\n",
-      "Traceback (most recent call last):\n",
-      "  File \"/home/nkrishna/miniconda3/lib/python3.9/site-packages/httpx/_transports/default.py\", line 60, in map_httpcore_exceptions\n",
-      "    yield\n",
-      "  File \"/home/nkrishna/miniconda3/lib/python3.9/site-packages/httpx/_transports/default.py\", line 218, in handle_request\n",
-      "    resp = self._pool.handle_request(req)\n",
-      "  File \"/home/nkrishna/miniconda3/lib/python3.9/site-packages/httpcore/_sync/connection_pool.py\", line 253, in handle_request\n",
-      "    raise exc\n",
-      "  File \"/home/nkrishna/miniconda3/lib/python3.9/site-packages/httpcore/_sync/connection_pool.py\", line 237, in handle_request\n",
-      "    response = connection.handle_request(request)\n",
-      "  File \"/home/nkrishna/miniconda3/lib/python3.9/site-packages/httpcore/_sync/connection.py\", line 86, in handle_request\n",
-      "    raise exc\n",
-      "  File \"/home/nkrishna/miniconda3/lib/python3.9/site-packages/httpcore/_sync/connection.py\", line 63, in handle_request\n",
-      "    stream = self._connect(request)\n",
-      "  File \"/home/nkrishna/miniconda3/lib/python3.9/site-packages/httpcore/_sync/connection.py\", line 111, in _connect\n",
-      "    stream = self._network_backend.connect_tcp(**kwargs)\n",
-      "  File \"/home/nkrishna/miniconda3/lib/python3.9/site-packages/httpcore/backends/sync.py\", line 82, in connect_tcp\n",
-      "    sock = socket.create_connection(\n",
-      "  File \"/home/nkrishna/miniconda3/lib/python3.9/contextlib.py\", line 137, in __exit__\n",
-      "    self.gen.throw(typ, value, traceback)\n",
-      "  File \"/home/nkrishna/miniconda3/lib/python3.9/site-packages/httpcore/_exceptions.py\", line 12, in map_exceptions\n",
-      "    raise to_exc(exc)\n",
-      "httpcore.ConnectError: [Errno -3] Temporary failure in name resolution\n",
-      "\n",
-      "The above exception was the direct cause of the following exception:\n",
-      "\n",
-      "Traceback (most recent call last):\n",
-      "  File \"/home/nkrishna/uscensus/uscensus/util/webcache.py\", line 50, in fetch\n",
-      "    r = session.send(req)\n",
-      "  File \"/home/nkrishna/miniconda3/lib/python3.9/site-packages/httpx/_client.py\", line 889, in send\n",
-      "    response = self._send_handling_auth(\n",
-      "  File \"/home/nkrishna/miniconda3/lib/python3.9/site-packages/httpx/_client.py\", line 917, in _send_handling_auth\n",
-      "    response = self._send_handling_redirects(\n",
-      "  File \"/home/nkrishna/miniconda3/lib/python3.9/site-packages/httpx/_client.py\", line 954, in _send_handling_redirects\n",
-      "    response = self._send_single_request(request)\n",
-      "  File \"/home/nkrishna/miniconda3/lib/python3.9/site-packages/httpx/_client.py\", line 990, in _send_single_request\n",
-      "    response = transport.handle_request(request)\n",
-      "  File \"/home/nkrishna/miniconda3/lib/python3.9/site-packages/httpx_caching/_sync/_transport.py\", line 55, in handle_request\n",
-      "    response, source = caching_protocol.run(self.io_handler)\n",
-      "  File \"/home/nkrishna/miniconda3/lib/python3.9/site-packages/httpx_caching/_policy.py\", line 89, in run\n",
-      "    return sync_callback_generator(\n",
-      "  File \"/home/nkrishna/miniconda3/lib/python3.9/site-packages/httpx_caching/_utils.py\", line 101, in sync_callback_generator\n",
-      "    to_send = callback(yielded)\n",
-      "  File \"/home/nkrishna/miniconda3/lib/python3.9/site-packages/multimethod/__init__.py\", line 315, in __call__\n",
-      "    return func(*args, **kwargs)\n",
-      "  File \"/home/nkrishna/miniconda3/lib/python3.9/site-packages/httpx_caching/_sync/_transport.py\", line 101, in _io_make_request\n",
-      "    response = self.transport.handle_request(action.request)  # type: ignore\n",
-      "  File \"/home/nkrishna/miniconda3/lib/python3.9/site-packages/httpx/_transports/default.py\", line 218, in handle_request\n",
-      "    resp = self._pool.handle_request(req)\n",
-      "  File \"/home/nkrishna/miniconda3/lib/python3.9/contextlib.py\", line 137, in __exit__\n",
-      "    self.gen.throw(typ, value, traceback)\n",
-      "  File \"/home/nkrishna/miniconda3/lib/python3.9/site-packages/httpx/_transports/default.py\", line 77, in map_httpcore_exceptions\n",
-      "    raise mapped_exc(message) from exc\n",
-      "httpx.ConnectError: [Errno -3] Temporary failure in name resolution\n",
       "DEBUG:uscensus.data.discovery:Finished processing metadata for dataset: http://api.census.gov/data/2021/acs/acs5/subject\n",
-      "DEBUG:uscensus.data.discovery:Indexing dataset metadata\n",
-      "DEBUG:uscensus.data.discovery:Done adding metadata\n",
-      "DEBUG:uscensus.data.discovery:Done committing metadata\n"
+      "DEBUG:uscensus.data.discovery:Done processing metadata\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 5.98 s, sys: 364 ms, total: 6.35 s\n",
-      "Wall time: 3min 9s\n"
+      "CPU times: user 5.57 s, sys: 550 ms, total: 6.12 s\n",
+      "Wall time: 3min 6s\n"
      ]
     }
    ],
@@ -187,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -220,7 +151,7 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>-1.540482</td>\n",
+       "      <td>-0.644898</td>\n",
        "      <td>http://api.census.gov/data/2021/acs/acs5</td>\n",
        "      <td>American Community Survey: 5-Year Estimates: D...</td>\n",
        "      <td>The American Community Survey (ACS) is an ongo...</td>\n",
@@ -231,7 +162,7 @@
       ],
       "text/plain": [
        "      score                                dataset_id  \\\n",
-       "0 -1.540482  http://api.census.gov/data/2021/acs/acs5   \n",
+       "0 -0.644898  http://api.census.gov/data/2021/acs/acs5   \n",
        "\n",
        "                                               title  \\\n",
        "0  American Community Survey: 5-Year Estimates: D...   \n",
@@ -240,19 +171,19 @@
        "0  The American Community Survey (ACS) is an ongo...  "
       ]
      },
-     "execution_count": 7,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "results = cl.search('\"acs 5 detailed tables\"')\n",
+    "results = cl.search('detailed')\n",
     "results"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -261,7 +192,7 @@
        "American Community Survey: 5-Year Estimates: Detailed Tables 5-Year"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -273,7 +204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -282,7 +213,7 @@
        "'http://api.census.gov/data/2021/acs/acs5'"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -293,7 +224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -472,7 +403,7 @@
        "[87 rows x 7 columns]"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -483,7 +414,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -602,7 +533,7 @@
        "[1145 rows x 2 columns]"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -613,7 +544,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -712,7 +643,7 @@
        "4  MEDIAN GROSS RENT BY BEDROOMS  "
       ]
      },
-     "execution_count": 12,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -724,7 +655,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -828,7 +759,7 @@
        "[3221 rows x 1 columns]"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -842,7 +773,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -851,7 +782,7 @@
        "2021"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -862,7 +793,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -871,7 +802,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -883,15 +814,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 187 ms, sys: 694 µs, total: 188 ms\n",
-      "Wall time: 187 ms\n"
+      "CPU times: user 172 ms, sys: 9.77 ms, total: 181 ms\n",
+      "Wall time: 182 ms\n"
      ]
     }
    ],
@@ -903,7 +834,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -917,7 +848,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -926,7 +857,7 @@
        "<AxesSubplot: >"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -951,7 +882,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -1038,7 +969,7 @@
        "13    239     MULTIPOLYGON (((-85.14183 31.83926, -85.11403 ...  "
       ]
      },
-     "execution_count": 20,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1049,15 +980,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 1e+03 ns, sys: 0 ns, total: 1e+03 ns\n",
-      "Wall time: 4.29 µs\n"
+      "CPU times: user 1 µs, sys: 0 ns, total: 1 µs\n",
+      "Wall time: 3.58 µs\n"
      ]
     }
    ],
@@ -1068,7 +999,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -1096,7 +1027,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1106,7 +1037,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -1115,7 +1046,7 @@
        "<AxesSubplot: title={'center': 'American Community Survey: 5-Year Estimates: Detailed Tables 5-Year\\nEstimate!!Median gross rent'}>"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     },
